Added Authentication and user sign up mail features

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -27,6 +27,11 @@ a {
   margin-top: 20px;
 }
 
+#user_nav {
+  text-align:right
+}
+
+
 #flash_notice, #flash_error, #flash_alert {
   padding: 5px 8px;
   margin: 10px 0;
@@ -73,3 +78,4 @@ a {
 .error_messages ul {
   margin: 0;
 }
+
